k8s/ingress/ingressroute-n8n.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`n8n.royal.local`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
