k8s/ingress/ingressroute-qdrant.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qdrant
  namespace: qdrant
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qdrant.royal.local`)
      kind: Rule
      services:
        - name: qdrant
          port: 6333
